# rover-craft

./: .gitignore  Cargo.toml  README.md  build.rs  local-run.sh  release-run.sh
docker/node/: Dockerfile
docker/test/: docker-compose.yaml
proto/: health_check.proto  probe.proto
protos/: cluster.proto  probe_sync.proto
src/: hash.rs  main.rs  store.rs  test.rs
src/cluster/: hash.rs  hash_test.rs  health_check_service.rs  mod.rs  network_node.rs  partition_manager.rs  partition_service.rs  proto_partition_service.rs
src/grpc/: leader_node.rs  mod.rs  node.rs  node_manager.rs  node_ref.rs  node_status.rs  nodes.rs  probe_sync_service.rs
src/grpc/service/: cluster.rs  mod.rs  probe_sync.rs
src/grpc/test/: grpc_test.rs  mod.rs
src/http/: controller.rs  error.rs  handlers.rs  mod.rs  probe_request.rs
src/probe/: probe.rs
src/store/: memory_store.rs  store.rs
