[package]
name = "rovercraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.20"
dashmap = "5.5.3"
tonic = "0.10.2"
prost = "0.12.1"
tower = "0.4.13"
hostname = "0.3.1"
fnv = "1.0.3"

[build-dependencies]
tonic-build = "0.10.2"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["full"] }

[profile.release]
codegen-units = 1
lto = "fat"
#rustflags = ["-C", "target-cpu=native"]
opt-level = "z"
strip = "debuginfo"
